[package]
name = "data_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43.1", features = ["lazy", "serde", "dtype-struct", "strings", "temporal", "dtype-date"]}
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.65"
arrow = {version = "53.2.0", features = ["csv"]}
chrono = "0.4.38"
comfy-table = "7.1.1"